--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+azure-storage-blob==12.8.1
+python-magic==0.4.24
+python-magic-bin==0.4.14
 colorama
 importlib-metadata
 keyring
-twine
-pathlib
 numpy
 pandas
+pathlib
 Pillow
 requests
+twine
 xlrd
