--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,8 @@ jobs:
     - uses: actions/checkout@v2
     - run: make build
     - run: make package
+      env:
+        ZEGAMI_SDK_VERSION: ${{ github.event.inputs.version }}
     - uses: actions/upload-artifact@v2
       with:
         name: wheel
