--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - run: make build
     - run: make lint
+    - run: make test
     - name: Make main branch build
       run: make package
       env:
