pin libraries and remove non-required libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,11 @@ azure-storage-blob==12.8.1
 flake8==3.9.2
 python-magic==0.4.24
 requests-mock==1.9.3
-colorama
-importlib-metadata
-keyring
-numpy
-pandas
-pathlib
-Pillow
+numpy==1.19.5
+pandas==1.1.5
+pathlib==1.0.1
+Pillow==8.3.2
 requests==2.26.0
-twine
-xlrd
-libmagic
-tqdm
+libmagic==1.0
+tqdm==4.62.2
 urllib3==1.26.6
