--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "name": "Run Example",
         "type": "python",
         "request": "launch",
-        "module": "examples.<example-name>",
+        "module": "examples.download_tagged_images",
         "args": [],
         "env": {}
     },
